spotify search refactored